# NodeSerialization

./: CMakeLists.txt
NodeSerialization/: CMakeLists.txt  flowunit.h  main.cpp  nodeBase.h  node_A.cpp  node_A.h  node_B.cpp  node_B.h  node_C.cpp  node_C.h  qeyeTest.h  serialization.h
QEyeVisionLibrary/: CMakeLists.txt  QEyeVisionLib.hpp
QEyeVisionLibrary/VisionFlow/: flowUnit.cpp  flowUnit.h  nodeBase.cpp  nodeBase.h  nodeConnection.cpp  nodeConnection.h  nodeDef.h  resultOutput.cpp  resultOutput.h  timer.h  variant.cpp  variant.h  variant_geometry.h
QEyeVisionLibrary/VisionFlow/serialization/: serialization.hpp  serialization_cv.h  serialization_qv.h  serialization_rv.h
QEyeVisionLibrary/VisionFlow/variant/: variant.cpp  variant.h  variant_base.h  variant_base.inl  variant_geometry.h  variant_geometry.inl
QEyeVisionLibraryNode/: CMakeLists.txt  QEyeVisionLibraryNode.hpp  serialization.h
QEyeVisionLibraryNode/ID/dataCode/: CMakeLists.txt  node.cpp  node.h
QEyeVisionLibraryNode/Location/colorFind/: node.cpp  node.h
QEyeVisionLibraryNode/Location/nccMatch/: nccModelInterface.h  node.cpp  node.h
QEyeVisionLibraryNode/Location/shapeMatch/: node.cpp  node.h  shapeModelInterface.cpp
QEyeVisionLibraryNode/Measurement/findCircle/: node.cpp  node.h
QEyeVisionLibraryNode/Measurement/findLine/: node.cpp  node.h
QEyeVisionLibraryNode/Measurement/findRect/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/: nodeFactory.cpp  nodeFactory.h  serialization.inl
QEyeVisionLibraryNode/NodeFactory/ID/dataCode/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Location/colorFind/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Location/nccMatch/: nccModelInterface.cpp  nccModelInterface.h  node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Location/shapeMatch/: node.cpp  node.h  shapeModelInterface.h
QEyeVisionLibraryNode/NodeFactory/Measurement/findCircle/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Measurement/findLine/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Measurement/findRect/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Preprocess/colorConvert/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Preprocess/imageProcess/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Preprocess/morphology/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Preprocess/smoothness/: node.cpp  node.h
QEyeVisionLibraryNode/NodeFactory/Preprocess/threshold/: node.cpp  node.h
QEyeVisionLibraryNode/Preprocess/colorConvert/: node.cpp  node.h
QEyeVisionLibraryNode/Preprocess/imageProcess/: node.cpp  node.h
QEyeVisionLibraryNode/Preprocess/morphology/: node.cpp  node.h
QEyeVisionLibraryNode/Preprocess/smoothness/: node.cpp  node.h
QEyeVisionLibraryNode/Preprocess/threshold/: node.cpp  node.h
ReVisionLib/: CMakeLists.txt  homMat2D.h  region.cpp  region.h  region.inl  remat.cpp  revision.hpp
ReVisionLib/ReVision/: hmat.h  irewindow.h  region.h  region.inl  remat.h  rmath.h
ReVisionLib/ReVision/abandon/: region.h
ReVisionLib/ReVision/classifier/: iclassifier.h
ReVisionLib/ReVision/classifier/ccore/mlp/: classifier_mlp.cpp  classifier_mlp.h
ReVisionLib/ReVision/classifier/hcore/mlp/: hclassifier_mlp.h
ReVisionLib/ReVision/feature/contour/: icontour.h
ReVisionLib/ReVision/feature/texture/: itexture.cpp  itexture.h
ReVisionLib/ReVision/feature/texture/hcore/: htexture.h
ReVisionLib/ReVision/geometry/: geometry.hpp
ReVisionLib/ReVision/geometry/adapted/: adapted_cv.hpp  adapted_cv.inl
ReVisionLib/ReVision/geometry/geometries/: annulus.inl  arc.hpp  arc.inl  circle.inl  contours.hpp  contours.inl  line.inl  multi_.hpp  multi_.inl  point.hpp  point.inl  polygon.hpp  polygon.inl  pose.hpp  pose.inl  ray.hpp  ray.inl  rectangle.inl  rotatedRect.inl  run.hpp  run.inl  runs.inl  size.hpp  size.inl
ReVisionLib/ReVision/imgproc/: iimgproc.h  ipreprocess.cpp  ipreprocess.h
ReVisionLib/ReVision/imgproc/ccore/: imgproc.cpp  imgproc.h  preprocess.h
ReVisionLib/ReVision/match/: imatch.cpp  imatch.h
ReVisionLib/ReVision/match/hcore/: genericShapeModel.cpp  genericShapeModel.h  matchInterface.cpp  matchInterface.h  nccModel.cpp  nccModel.h  shapeModel.cpp  shapeModel.h
ReVisionLib/ReVision/measure/: imeasure.h
ReVisionLib/ReVision/measure/abandon/fit/: ifit.cpp
ReVisionLib/ReVision/measure/abandon/fit/ccore/: fit.cpp
ReVisionLib/ReVision/modules/textureClassifier/: itextureClassifier.cpp  itextureClassifier.h
ReVisionLib/_doc/: readme.txt
ReVisionLib/abandon/: region.cpp
ReVisionLib/classifier/: iclassifier.cpp
ReVisionLib/classifier/hcore/mlp/: hclassifier_mlp.cpp  hclassifier_mlp.h
ReVisionLib/feature/contour/: icontour.cpp  icontour.h
ReVisionLib/feature/texture/: itexture.h
ReVisionLib/feature/texture/hcore/: htexture.cpp  htexture.h
ReVisionLib/geometry/geometries/: annulus.hpp  annulus.inl  arc.inl  circle.hpp  circle.inl  contours.inl  line.hpp  multi_.inl  point.inl  polygon.inl  pose.inl  ray.inl  rectangle.hpp  rotatedRect.hpp  rotatedRect.inl  run.inl  runs.hpp  runs.inl  size.inl
ReVisionLib/imgproc/: iimgproc.cpp  iimgproc.h  ipreprocess.h
ReVisionLib/imgproc/ccore/: imgproc.cpp  imgproc.h  preprocess.cpp  preprocess.h
ReVisionLib/match/: imatch.h
ReVisionLib/match/hcore/: genericShapeModel.cpp  genericShapeModel.h  matchInterface.h  nccModel.cpp  nccModel.h  shapeModel.cpp  shapeModel.h
ReVisionLib/measure/: imeasure.h  readme
ReVisionLib/measure/abandon/fit/: ifit.h
ReVisionLib/measure/abandon/fit/ccore/: fit.h
ReVisionLib/modules/textureClassifier/: itextureClassifier.h
